--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,7 +26,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Mainkan keseruan satwa!"
+            android:text="Play fun with animals!"
             android:fontFamily="sans-serif"
             android:textColor="@color/brown_light"
             android:textSize="20dp"
