--- a/app/src/main/res/layout/activity_story.xml
+++ b/app/src/main/res/layout/activity_story.xml
@@ -26,7 +26,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Cerita Satwa!"
+            android:text="Animal Stories!"
             android:fontFamily="sans-serif"
             android:textColor="@color/brown_light"
             android:textSize="20dp"
